[tool.poetry]
name = "flow-master"
version = "0.1.0"
description = "option trading game"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flow_master"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
pandas = "^2.3.3"
streamlit = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
